Bug 113856 - Navigator: Bad behaviour of controllers when changing slides
Summary: Navigator: Bad behaviour of controllers when changing slides
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.3 all versions
Hardware: All All
: medium normal
Assignee: Martin Bakos
URL:
Whiteboard: target:6.1.0
Keywords: difficultyBeginner, easyHack, skillCpp, topicUI
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2017-11-15 13:43 UTC by Martin Bakos
Modified: 2017-12-05 22:17 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Pic shows the bad behaviour (26.08 KB, image/png)
2017-11-15 14:05 UTC, Martin Bakos
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Bakos 2017-11-15 13:43:34 UTC
Description:
There are arrow icons on the top of navigator window over the slide naming. When you change slides on the left side of LibreOffice window the slide naming in navigator changing well, but the arrow icons stick in previous status.

Steps to Reproduce:
1. Open Impress
2. Create some slides
3. Open navigator (sidebar -> navigator)
4. Be on the first or the last slide
5. Change between the first or last slide on the left side of LibreOffice window

Actual Results:  
Arrow icons stick in previous status (If you were on the first slide and change to the second then you can't use "Previous arrow")

Expected Results:
Arrow icons refresh to the actual slide possibilities.


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:


User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_6) AppleWebKit/604.3.5 (KHTML, like Gecko) Version/11.0.1 Safari/604.3.5
Comment 1 Martin Bakos 2017-11-15 14:05:33 UTC
Created attachment 137780 [details]
Pic shows the bad behaviour
Comment 2 Xisco Faulí 2017-11-15 14:57:58 UTC
Confirm in

Version: 6.0.0.0.alpha1+
Build ID: b56479e88edeabd6c6fe51cc0095a23543229856
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: th-TH (ca_ES.UTF-8); Calc: grou

and

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

@Marting, I see you have assigned this issue to yourself. Do you plan to work on this?
Comment 3 Martin Bakos 2017-11-15 15:12:22 UTC
(In reply to Xisco Faulí from comment #2)
> Confirm in
> 
> Version: 6.0.0.0.alpha1+
> Build ID: b56479e88edeabd6c6fe51cc0095a23543229856
> CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
> Locale: th-TH (ca_ES.UTF-8); Calc: grou
> 
> and
> 
> Version: 4.3.0.0.alpha1+
> Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e
> 
> @Marting, I see you have assigned this issue to yourself. Do you plan to
> work on this?

Yes
Comment 4 Xisco Faulí 2017-11-15 15:15:32 UTC
That's fantastic. Setting to ASSIGNED then...
Comment 5 Tamás Zolnai 2017-11-15 19:41:47 UTC
Just some notes to help you with solving this issue:
The navigator code is here:
sd/uiconfig/simpress/ui/navigatorpanel.ui -> defines the view of the panel
sd/source/ui/dlg/navigatr.cxx -> defines the panel behavior
SdPageNameControllerItem::StateChanged() method seems a good starting point. This method is called when slide changes and this method makes the navigator update.
Comment 6 Commit Notification 2017-12-05 22:16:34 UTC
martinb214 committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=962873c863ee8f5dcb80af05bd658266304bb5cb

tdf#113856 Navigator: Bad behaviour of controllers when changing slides

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.