tdf#113856 Navigator: Bad behaviour of controllers when changing slides

Change-Id: I11e9cb607c36112f19f7cace1d8c5b7559ebf2a1
Reviewed-on: https://gerrit.libreoffice.org/45423
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>
Tested-by: Jenkins <ci@libreoffice.org>